tests/snapshots/examples_fixtures/primop__strings.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/strings.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/strings.flx:1:1
  |
1 | print("== PrimOps: strings ==");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | -------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/primop/strings.flx:1:1
  |
1 | print("== PrimOps: strings ==");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | -------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/strings.flx:3:1
  |
3 | print(string_len(s));
  | ^^^^^^^^^^^^^^^^^^^^^
  | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/strings.flx:4:1
  |
4 | print(string_concat("hello", " world"));
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/strings.flx:5:1
  |
5 | print(string_slice("hello flux", 0, 5));
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/strings.flx:6:1
  |
6 | print(trim(s));
  | ^^^^^^^^^^^^^^^
  | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/strings.flx:7:1
  |
7 | print(upper("flux"));
  | ^^^^^^^^^^^^^^^^^^^^^
  | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/strings.flx:8:1
  |
8 | print(lower("FLUX"));
  | ^^^^^^^^^^^^^^^^^^^^^
  | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/strings.flx:9:1
  |
9 | print(starts_with("flux-lang", "flux"));
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/strings.flx:10:1
   |
10 | print(ends_with("flux-lang", "lang"));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/strings.flx:11:1
   |
11 | print(replace("flux flux", "flux", "vm"));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/strings.flx:12:1
   |
12 | print(chars("abc"));
   | ^^^^^^^^^^^^^^^^^^^^
   | -------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/strings.flx:13:1
   |
13 | print(substring("abcdef", 1, 4));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 13 errors.
== stdout ==
<not executed>
